fix: text align headers

--- a/static/style.css
+++ b/static/style.css
@@ -51,8 +51,9 @@ img {
     margin-bottom: 2ch;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1ch;
+    text-align: left;
 }
 
 ol, ul, p {
